build script modules updated and command-line property removed